package book;

public record BookInfo(String title, String author, String genre, int year) {

}
