package library;

public record BookPosition(int rackNumber, int shelfNumber, String bookUrl, boolean isEbook) {

}
